[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/game_over/white.png" type="Texture" id=1]
[ext_resource path="res://ui/game_over/Blur.tres" type="Material" id=2]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/game_over/panel_full.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/controls/btn_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/controls/btn_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/pause_menu/btn_focus.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/pause_menu/btn_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/pause_menu/btn_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://ui/pause_menu/PauseMenu.gd" type="Script" id=10]
[ext_resource path="res://ui/controls/btn_disabled.tres" type="StyleBox" id=11]

[sub_resource type="DynamicFont" id=1]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="PauseMenu" type="TextureRect"]
pause_mode = 2
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = -20.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = 60.0
margin_top = 20.0
margin_right = -60.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Pause Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 65.0
margin_right = -15.0
margin_bottom = -65.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
margin_top = 7.0
margin_right = 370.0
margin_bottom = 68.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
text = "Continue"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
margin_top = 78.0
margin_right = 370.0
margin_bottom = 139.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelection" type="Button" parent="Panel/VBoxContainer"]
margin_top = 149.0
margin_right = 370.0
margin_bottom = 210.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
text = "Level Selection"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
margin_top = 220.0
margin_right = 370.0
margin_bottom = 281.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
disabled = true
text = "Settings"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
margin_top = 291.0
margin_right = 370.0
margin_bottom = 352.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
text = "Main Menu"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 362.0
margin_right = 370.0
margin_bottom = 423.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
text = "Quit"

[node name="Info" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -60.0
margin_right = -60.0
margin_bottom = -15.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "v.0.1 Test Build Windows
link und andere sch√∂ne Dinge"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LevelSelection" to="." method="_on_LevelSelection_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
